src/objects/QPMS__Supplier_Junction__c.object
<CustomObject>
    <description>This is the junction object for Supplier Quality Management module.</description>
    <fields>
        <fullName>QPMS__Access_Level__c</fullName>
        <description>To Determine the access on the record</description>
        <label>Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Supplier Junctions</relationshipLabel>
        <relationshipName>Supplier_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Information__c</fullName>
        <description>Holds Contact Information</description>
        <label>Contact Information</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Group_Id__c</fullName>
        <description>Holds Group</description>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Name__c</fullName>
        <description>Holds Name</description>
        <label>Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds Supplier Change</description>
        <label>Supplier Change</label>
        <referenceTo>QPMS__Supplier_Change__c</referenceTo>
        <relationshipLabel>Supplier Junctions</relationshipLabel>
        <relationshipName>Supplier_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Profile__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Holds Supplier Profile</description>
        <label>Supplier Profile</label>
        <referenceTo>QPMS__Supplier_Profile__c</referenceTo>
        <relationshipLabel>Supplier Junctions</relationshipLabel>
        <relationshipName>Supplier_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <description>Holds Title</description>
        <label>Title</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>To Determine The Security Entity is User or Group</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this is look up to user object</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Supplier Junction</label>
    <nameField>
        <label>Supplier Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Junctions</pluralLabel>
    <recordTypes>
        <fullName>QPMS__Address</fullName>
        <active>true</active>
        <label>Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Certificate</fullName>
        <active>true</active>
        <label>Certificate</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Contact</fullName>
        <active>true</active>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Interviewed_Personnel</fullName>
        <active>true</active>
        <label>Interviewed Personnel</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Part</fullName>
        <active>true</active>
        <label>Part</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Security</fullName>
        <active>true</active>
        <label>Security</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>